public class Bird extends Animal {
    public Bird(int Age, String Gender, int WeightInPounds){
        super(Age, Gender, WeightInPounds);
    }
    public void fly(){
        System.out.println("Im flying w w w");
    }

    public void move(){
        System.out.println("bird move");
    }
}
