public class Chicken extends Bird {
    public Chicken(int Age, String Gender, int WeightInPounds){
        super(Age, Gender, WeightInPounds);
    }

    public void fly(){
        System.out.println("Im flapping w n -");
    }


}
