@startuml
skinparam classAttributeIconSize 0
class Zoo{

}
abstract class Animal{
- age: int
- gender: String
- weight: int

+ eat():
+ sleep():
}

class Bird{
+ fly():
+ move():
}

class Fish{
+ swim():
+ move():
}

class Chicken{

}

class Sparrow{

}

interface Flyable{
}

Zoo o-- "0..*" Animal: contains >
Animal <|-- Fish
Animal <|-- Bird
Bird <|-- Chicken
Bird <|-- Sparrow
Flyable <|.. Sparrow

@enduml